# octo-cli

./: README.md  pyproject.toml
src/: main.py  test.py
src/commands/: model.py  new.py
src/controllers/: model.py
src/generators/: model_generator.py
src/octo_cli/: __main__.py  main.py
src/octo_cli/commands/: new.py
src/octo_cli/controllers/: model.py
src/octo_cli/schemas/: column.py  model.py
src/octo_cli/templates/: model.py.j2
src/schemas/: model.py
src/templates/: model.py
templates/: deleted_column.py.template  engine_import.py.template  model.py.j2  model.py.template  simple_column.py.template  updated_column.py.template
