[project]
name = "octo-cli"
version = "0.1.0"
description = ""
authors = [
    { name = "Samuel Bagatelli", email = "contato.samuelbagatelli@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["typer (>=0.16.0,<0.17.0)"]

[tool.poetry]
packages = [{ include = "src", from = "." }]

[tool.poetry.scripts]
octo = "src.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
