[project]
name = "octo-cli"
version = "0.1.8"
description = ""
authors = [
    { name = "Samuel Bagatelli", email = "contato.samuelbagatelli@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "octo_cli", from = "src" }]

[tool.poetry.scripts]
octo = "octo_cli.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
